--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 :root {
-  $primary-color: #07b45d;
-  $white-color: #fff;
-  $black-color: #000;
-  $grey-color: #7c7c7c;
-  $text-color: #333;
-  $border-color: #dbdbdb;
-  $star-gold-color: #ffce3e;
+  --primary-color: #07b45d;
+  --white-color: #fff;
+  --black-color: #000;
+  --grey-color: #7c7c7c;
+  --text-color: #333;
+  --border-color: #dbdbdb;
+  --star-gold-color: #ffce3e;
 
-  $header-height: 120px;
-  $navbar-height: 34px;
-  $header-with-search-height: $header-height - $navbar-height;
-  $header-sort-bar-height: 46px;
+  --header-height: 120px;
+  --navbar-height: 34px;
+  /* --header-with-search-height: --header-height - --navbar-height; */
+  --header-sort-bar-height: 46px;
 }
 * {
   box-sizing: inherit;
