--- a/src/features/TrackersGlobalMap/Trackers.scss
+++ b/src/features/TrackersGlobalMap/Trackers.scss
@@ -1,6 +1,7 @@
 .tracker-content {
     margin: 0 auto;
     padding: 3rem 2rem;
+    display: flex;
 }
 .tracker-content__dropdown {
   background-color: white;
