--- a/src/features/TrackersGlobalMap/components/InfoBox/InfoBox.css
+++ b/src/features/TrackersGlobalMap/components/InfoBox/InfoBox.css
@@ -27,7 +27,5 @@
 
 .infoBox__total {
   color: #6c757d;
-  font-weight: 700 !important;
-  font-size: 0.8rem !important;
-  margin-top: 15px !important;
+  font-size: 0.5rem;
 }
